<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favourites"
        android:title="Favourites"
        android:icon="@drawable/my_liked"/>
    <item
        android:id="@+id/mapped"
        android:title="My Mapped"
        android:icon="@drawable/pin_poiter"/>
</menu>